@@ -4,6 +4,7 @@ AZUREUS CHANGELOG
 2007.xx.xx | Azureus 3.0.1.7
 
 FEATURE: UI   | New "Torrent" menu in the menu bar [amc1]
+FEATURE: UI   | "Clear Resume Data" menu option added [amc1]
 
 CHANGE: Core  | Much better peer ID identification code added, many more clients now correctly identified [amc1]
 CHANGE: Core  | Core changes in some places to allow "Default save path" to be used without requiring "Use default data dir" to be enabled [hasturkun]
